--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -17,7 +17,7 @@
     --primary-color: #FFC107;
     --secondary-color: #212121;
     --accent-color: #2C2F3A; /* Dark input background instead of white */
-    --light-bg: #1E1F26; /* dark background */
+    --light-bg: #FFFFF8; /* light background */
     --text-color: #FFFFFF;
     --danger-color: #D32F2F;
     --modal-bg: rgba(33, 33, 33, 0.7);
