--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -23,7 +23,7 @@
     --primary-color: #131312;
     --secondary-color: #e4e3e0;
     --accent-color: #FFFFFF;
-    --light-bg: #1E1F26;
+    --light-bg: #FFFFF8;
     --text-color: #000000;
     --footer-height: 70px;
     --modal-bg: rgba(33, 33, 33, 0.7); /* Added */
