--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -15,7 +15,7 @@
             --primary-color: #FFC107;
             --secondary-color: #212121;
             --accent-color: #FFFFFF;
-            --light-bg: #1E1F26;
+            --light-bg: #FFFFF8;
             --text-color: #FFFFFF;
             --danger-color: #D32F2F;
             --modal-bg: rgba(33, 33, 33, 0.7);
