--- a/mobile/4-Market/luckychest.html
+++ b/mobile/4-Market/luckychest.html
@@ -18,7 +18,7 @@
       --accent-color: #2A2B32;
       --text-color: #FFFFFF;
       --border-dark: #444754;
-      --light-bg: #1E1F26;
+      --light-bg: #FFFFF8;
       --footer-height: 70px;
       --add-btn-height: 80px;
       --header-height: 58px;
