--- a/mobile/4-Market/rollthedice.html
+++ b/mobile/4-Market/rollthedice.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background: #1E1F26;
+      background: #FFFFF8;
       color: #fff;
       margin: 0;
       padding: 30px;
