--- a/mobile/5-Stats/stats.html
+++ b/mobile/5-Stats/stats.html
@@ -15,7 +15,7 @@
             --primary-color: #FFC107; /* Honey yellow */
             --secondary-color: #212121; /* Deep black */
             --accent-color: #FFFFFF; /* White */
-            --light-bg: #FFF8E1; /* Pale honey */
+            --light-bg: #FFFFF8; /* Light background */
             --text-color: #212121;
             --danger-color: #D32F2F; /* Red for remove */
             --modal-bg: rgba(33, 33, 33, 0.7);
