--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -17,7 +17,7 @@
             --primary-color: #FFC107;
             --secondary-color: #212121;
             --accent-color: #2C2F3A;
-            --light-bg: #1E1F26;
+            --light-bg: #FFFFF8;
             --text-color: #FFFFFF;
             --danger-color: #D32F2F;
             --secondary-accent: #FFCA28;
