--- a/backend/public/registeredUsers.html
+++ b/backend/public/registeredUsers.html
@@ -6,7 +6,7 @@
   <title>Registered Users</title>
   <style>
     body {
-      background-color: #1E1F26;
+      background-color: #FFFFF8;
       color: white;
       font-family: 'Poppins', sans-serif;
       padding: 20px;
