--- a/errorTasks.html
+++ b/errorTasks.html
@@ -6,7 +6,7 @@
   <title>Error Tasks</title>
   <style>
     body {
-      background: #1e1f26;
+      background: #FFFFF8;
       color: #fff;
       font-family: 'Poppins', sans-serif;
       padding: 20px;
