--- a/mobile/2-UserProfiles/chooseAvatar.html
+++ b/mobile/2-UserProfiles/chooseAvatar.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: radial-gradient(#161616, #070707);
+      background: #FFFFF8;
       color: white;
       overflow: hidden;
       height: 100vh;
