--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -15,7 +15,7 @@
             --primary-color: #FFC107;
     --secondary-color: #212121;
     --accent-color: #FFFFFF;
-    --light-bg: #1E1F26; /* dark background */
+    --light-bg: #FFFFF8; /* light background */
     --text-color: #FFFFFF; /* white text */
             --danger-color: #D32F2F;
             --modal-bg: rgba(33, 33, 33, 0.7);
