--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -11,7 +11,7 @@
             --primary-color: #FFC107;
             --secondary-color: #212121;
             --accent-color: #2A2B32;
-            --light-bg: #1E1F26;
+            --light-bg: #FFFFF8;
             --text-color: #FFFFFF;
             --danger-color: #D32F2F;
             --modal-bg: rgba(33, 33, 33, 0.7);
