--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -16,7 +16,7 @@
     --primary-color: #E0B018; /* softened gold */
     --secondary-color: #212121;
     --accent-color: #2C2F3A;
-    --light-bg: #1E1F26;
+    --light-bg: #FFFFF8;
     --text-color: #FFFFFF;
     --danger-color: #D32F2F;
     --muted-button: #3A3D4B;
