--- a/mobile/4-Market/addreward.html
+++ b/mobile/4-Market/addreward.html
@@ -15,7 +15,7 @@
       --primary-color: #ffc107;
       --secondary-color: #212121;
       --accent-color: #ffffff;
-      --light-bg: #1e1f26;
+      --light-bg: #FFFFF8;
       --card-bg: #2a2b32;
       --border-dark: #444754;
       --text-color: #ffffff;
