--- a/onboarding.html
+++ b/onboarding.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background-color: #1E1F26;
+      background-color: #FFFFF8;
       color: #fff;
       font-family: 'Poppins', sans-serif;
       padding: 2rem;
