--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
             }
 
             body {
-                background: linear-gradient(135deg, #1e1f26 0%, #2a2b32 100%);
+                background: #fffff8;
                 color: #ffffff;
                 font-family: "Poppins", sans-serif;
                 display: flex;
@@ -20,7 +20,6 @@
                 justify-content: center;
                 min-height: 100vh;
                 overflow: hidden;
-                animation: gradientShift 15s ease infinite;
             }
 
             @keyframes gradientShift {
@@ -365,10 +364,7 @@
     <body>
         <div class="container">
             <div class="logo">
-                <img
-                    src="https://i.postimg.cc/x1fDPQPX/pngtree-honey-bee-logo-design-vector-png-image-12507314-removebg-preview.png"
-                    alt="BeeMazing Logo"
-                />
+                <img src="mobile/1-Home/logo.png" alt="BeeMazing Logo" />
             </div>
             <h2 id="formTitle">Register</h2>
             <form id="authForm" novalidate>
