--- a/login.html
+++ b/login.html
@@ -100,9 +100,9 @@
       width: 100%;
       padding: 10px;
       border-radius: 8px;
-      border: 2px solid var(--border-dark);
-      background: var(--accent-color);
-      color: white;
+      border: 2px solid #ccc;
+      background: #ffffff;
+      color: #333333;
       margin-bottom: 10px;
       font-size: 16px;
     }
@@ -144,9 +144,9 @@
       width: 100%;
       padding: 10px;
       margin: 10px 0;
-      background: var(--accent-color);
-      color: white;
-      border: 2px solid var(--border-dark);
+      background: #ffffff;
+      color: #333333;
+      border: 2px solid #ccc;
       border-radius: 8px;
       font-size: 16px;
     }
