--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -85,14 +85,14 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #2A2B32; /* dark card */
+    background: var(--primary-color); /* yellow background */
     padding: 15px;
     margin: 10px 0;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    border: 2px solid var(--border-dark); /* dark subtle border */
-    color: var(--text-color);
+    border: 2px solid var(--primary-color); /* yellow border */
+    color: white;
 }
         .user-list-item:hover {
             transform: translateY(-5px);
@@ -100,7 +100,7 @@ body {
         }
         .remove-user-btn {
             background: var(--secondary-color);
-            color: var(--primary-color);
+            color: white;
             border: none;
             border-radius: 50%;
             width: 30px;
@@ -379,7 +379,7 @@ body {
 
 
 .admin-checkmark {
-    color: #00C4B4;
+    color: var(--secondary-color);
     font-size: 16px;
     font-weight: bold;
 }
