--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -611,10 +611,10 @@ fetch("/BeeMazing-A1/shared/taskrotations.js?t=" + Date.now(), { method: "HEAD" 
 
 
 
-if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undefined') {
-    console.error("taskrotations.js failed to load or does not contain mixedTurnData/individualTurnData");
+if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undefined' || typeof filterTasksForDate === 'undefined') {
+    console.error("taskrotations.js failed to load or does not contain required functions (mixedTurnData/individualTurnData/filterTasksForDate)");
 } else {
-    console.log("taskrotations.js loaded successfully");
+    console.log("taskrotations.js loaded successfully with all required functions");
 }
 
         // Dynamically highlight the active footer icon
@@ -670,7 +670,21 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
         const taskList = document.getElementById("taskList");
         taskList.innerHTML = "";
 
-        const visibleTasks = filterTasksForDate(tasks, selectedDate);
+        let visibleTasks;
+        if (typeof filterTasksForDate === 'function') {
+            visibleTasks = filterTasksForDate(tasks, selectedDate);
+        } else {
+            console.error("filterTasksForDate function not available - using fallback filtering");
+            // Fallback: simple date range filtering without exceptions
+            visibleTasks = tasks.filter(task => {
+                if (!task.date) return false;
+                const range = task.date.split(" to ");
+                const from = new Date(range[0]);
+                const to = range[1] ? new Date(range[1]) : new Date(3000, 0, 1);
+                const selected = new Date(selectedDate);
+                return selected >= from && selected <= to;
+            });
+        }
 
         if (visibleTasks.length === 0) {
             taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
@@ -687,7 +701,11 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
                 task.users = ["Unknown"];
             }
 
-            let taskHTML = `<strong>${task.title}</strong>`;
+            // Check if this is a modified occurrence
+            const isModified = task.isModified || false;
+            const modificationIndicator = isModified ? ' <span style="color: #ffeb3b; font-size: 12px;">📝 Modified</span>' : '';
+
+            let taskHTML = `<strong>${task.title}${modificationIndicator}</strong>`;
             let turnData = { turns: [], completedCount: 0, requiredTimes: 1 };
 
             if (task.settings?.includes("Rotation")) {
@@ -766,14 +784,15 @@ if (typeof mixedTurnData === 'undefined' || typeof individualTurnData === 'undef
                 if (!e.target.classList.contains("delete-btn")) {
                     const latest = await fetch(`https://beemazing1.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
                     const latestResult = await latest.json();
-                    const latestTask = latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
+                    // Use the original task reference if this is a modified occurrence
+                    const latestTask = task.originalTask || latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
                     if (latestTask) showTaskDetails(latestTask);
                 }
             });
 
             taskDiv.querySelector(".delete-btn").addEventListener("click", async (e) => {
                 e.stopPropagation();
-                if (confirm("Are you sure you want to delete this task?")) {
+                if (confirm("Are you sure you want to delete this entire task? This will affect all past and future occurrences.")) {
                     await deleteTaskFromBackend(task.title, task.date);
                     loadTasksForDate(selectedDate);
                 }
@@ -903,7 +922,12 @@ async function showTaskDetails(task) {
 
     taskDetails += `
         <br>
-        <button id="editTaskBtn" style="padding: 6px 10px; background: var(--secondary-color); color: var(--accent-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Task</button>
+        <div style="display: flex; gap: 8px; flex-wrap: wrap;">
+            <button id="editOccurrenceBtn" style="padding: 6px 10px; background: var(--secondary-color); color: var(--accent-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit This Occurrence</button>
+            <button id="editFutureBtn" style="padding: 6px 10px; background: var(--primary-color); color: white; font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Future Occurrences</button>
+            <button id="deleteOccurrenceBtn" style="padding: 6px 10px; background: #ff4444; color: white; font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Delete This Occurrence</button>
+            <button id="editTaskBtn" style="padding: 6px 10px; background: var(--secondary-color); color: var(--accent-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Entire Task</button>
+        </div>
     `;
 
     const modal = document.createElement("div");
@@ -915,19 +939,51 @@ async function showTaskDetails(task) {
         if (e.target.classList.contains("task-modal")) modal.remove();
     });
 
+    // Edit single occurrence
+    document.getElementById("editOccurrenceBtn").addEventListener("click", () => {
+        const modifiedTask = { ...task };
+        // Mark this as a single occurrence edit
+        modifiedTask.isOccurrenceEdit = true;
+        modifiedTask.targetDate = selectedDate;
+        modifiedTask.originalStartDate = task.date.split(" to ")[0];
+        localStorage.setItem("familyApp_editTask", JSON.stringify(modifiedTask));
+        localStorage.setItem("familyApp_editTask_index", task.title + "-" + task.date + "-occurrence");
+        window.location.href = "/BeeMazing-A1/mobile/3-Tasks/addtasks.html";
+    });
 
+    // Edit future occurrences
+    document.getElementById("editFutureBtn").addEventListener("click", () => {
+        const modifiedTask = { ...task };
+        // Mark this as a future edit (split task)
+        modifiedTask.isFutureEdit = true;
+        modifiedTask.splitDate = selectedDate;
+        modifiedTask.originalStartDate = task.date.split(" to ")[0];
+        localStorage.setItem("familyApp_editTask", JSON.stringify(modifiedTask));
+        localStorage.setItem("familyApp_editTask_index", task.title + "-" + task.date + "-future");
+        window.location.href = "/BeeMazing-A1/mobile/3-Tasks/addtasks.html";
+    });
 
+    // Delete single occurrence
+    document.getElementById("deleteOccurrenceBtn").addEventListener("click", async () => {
+        if (confirm(`Are you sure you want to delete this task occurrence on ${selectedDate}? This will only affect this specific date.`)) {
+            modal.remove();
+            await deleteSingleOccurrence(task.title, selectedDate, task.date.split(" to ")[0]);
+            loadTasksForDate(selectedDate);
+        }
+    });
+
+    // Edit entire task (original functionality)
     document.getElementById("editTaskBtn").addEventListener("click", () => {
-    const encodedTitle = encodeURIComponent(task.title);
-    const encodedDate = encodeURIComponent(task.date.split(" to ")[0]); // Use start date
-    const admin = localStorage.getItem("currentAdminEmail");
-    const user = localStorage.getItem("currentUser");
-    if (admin && user) {
-        window.location.href = `/BeeMazing-A1/mobile/3-Tasks/addtasks.html?editTitle=${encodedTitle}&editDate=${encodedDate}&admin=${encodeURIComponent(admin)}&user=${encodeURIComponent(user)}`;
-    } else {
-        alert("Admin or user information missing. Please log in again.");
-    }
-});
+        const encodedTitle = encodeURIComponent(task.title);
+        const encodedDate = encodeURIComponent(task.date.split(" to ")[0]); // Use start date
+        const admin = localStorage.getItem("currentAdminEmail");
+        const user = localStorage.getItem("currentUser");
+        if (admin && user) {
+            window.location.href = `/BeeMazing-A1/mobile/3-Tasks/addtasks.html?editTitle=${encodedTitle}&editDate=${encodedDate}&admin=${encodeURIComponent(admin)}&user=${encodeURIComponent(user)}`;
+        } else {
+            alert("Admin or user information missing. Please log in again.");
+        }
+    });
 
 
 }
@@ -1048,6 +1104,57 @@ async function finishTask(userName, task, button, selectedDate) {
                         return;
                     }
                     console.log(`Retrying delete request (${attempt}/${maxRetries})...`);
+                    await new Promise(resolve => setTimeout(resolve, 2000));
+                }
+            }
+        }
+
+        async function deleteSingleOccurrence(title, date, originalStartDate) {
+            const adminEmail = localStorage.getItem("currentAdminEmail");
+            console.log("Deleting single occurrence with:", { adminEmail, title, date, originalStartDate });
+            if (!adminEmail) {
+                alert("No admin email found.");
+                return;
+            }
+
+            const maxRetries = 2;
+            let attempt = 0;
+
+            while (attempt <= maxRetries) {
+                const controller = new AbortController();
+                const timeoutId = setTimeout(() => controller.abort(), 90000);
+
+                try {
+                    const response = await fetch(
+                        `https://beemazing1.onrender.com/api/tasks/occurrence?adminEmail=${encodeURIComponent(adminEmail)}&title=${encodeURIComponent(title)}&date=${encodeURIComponent(date)}&originalStartDate=${encodeURIComponent(originalStartDate)}`,
+                        {
+                            method: "DELETE",
+                            headers: {
+                                "Content-Type": "application/json"
+                            },
+                            signal: controller.signal
+                        }
+                    );
+
+                    clearTimeout(timeoutId);
+
+                    if (!response.ok) {
+                        const errorData = await response.json();
+                        throw new Error(`Failed to delete occurrence: ${errorData.error || response.statusText}`);
+                    }
+
+                    console.log("Task occurrence deleted successfully");
+                    alert("Task occurrence deleted successfully");
+                    return;
+                } catch (error) {
+                    clearTimeout(timeoutId);
+                    attempt++;
+                    if (attempt > maxRetries) {
+                        console.error("Error deleting task occurrence after retries:", error);
+                        alert(`Failed to delete task occurrence: ${error.message}`);
+                        return;
+                    }
+                    console.log(`Retrying delete occurrence request (${attempt}/${maxRetries})...`);
                     await new Promise(resolve => setTimeout(resolve, 2000));
                 }
             }
