--- a/taskz.html
+++ b/taskz.html
@@ -109,7 +109,11 @@ try {
             task.users = ["Unknown"];
         }
 
-        let taskHTML = `<strong>${task.title}</strong>`;
+        // Check if this is a modified occurrence
+        const isModified = task.isModified || false;
+        const modificationIndicator = isModified ? ' <span style="color: #ffeb3b; font-size: 12px;">📝 Modified</span>' : '';
+
+        let taskHTML = `<strong>${task.title}${modificationIndicator}</strong>`;
         let turnData = { turns: [], completedCount: 0, requiredTimes: 1 };
 
         if (task.settings?.includes("Rotation")) {
@@ -188,14 +192,15 @@ try {
             if (!e.target.classList.contains("delete-btn")) {
                 const latest = await fetch(`https://beemazing1.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
                 const latestResult = await latest.json();
-                const latestTask = latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
+                // Use the original task reference if this is a modified occurrence
+                const latestTask = task.originalTask || latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
                 if (latestTask) showTaskDetails(latestTask);
             }
         });
 
         taskDiv.querySelector(".delete-btn").addEventListener("click", async (e) => {
             e.stopPropagation();
-            if (confirm("Are you sure you want to delete this task?")) {
+            if (confirm("Are you sure you want to delete this entire task? This will affect all past and future occurrences.")) {
                 await deleteTaskFromBackend(task.title, task.date);
                 loadTasksForDate(selectedDate);
             }
@@ -317,7 +322,12 @@ if (uniqueUsers.length > 0) {
 
 taskDetails += `
     <br>
-    <button id="editTaskBtn" style="padding: 6px 10px; background: var(--secondary-color); color: var(--accent-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Task</button>
+    <div style="display: flex; gap: 8px; flex-wrap: wrap;">
+        <button id="editOccurrenceBtn" style="padding: 6px 10px; background: var(--secondary-color); color: var(--accent-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit This Occurrence</button>
+        <button id="editFutureBtn" style="padding: 6px 10px; background: var(--primary-color); color: white; font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Future Occurrences</button>
+        <button id="deleteOccurrenceBtn" style="padding: 6px 10px; background: #ff4444; color: white; font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Delete This Occurrence</button>
+        <button id="editTaskBtn" style="padding: 6px 10px; background: var(--secondary-color); color: var(--accent-color); font-weight: bold; border-radius: 6px; border: none; cursor: pointer;">Edit Entire Task</button>
+    </div>
 `;
 
 const modal = document.createElement("div");
@@ -329,6 +339,40 @@ modal.addEventListener("click", (e) => {
     if (e.target.classList.contains("task-modal")) modal.remove();
 });
 
+// Edit single occurrence
+document.getElementById("editOccurrenceBtn").addEventListener("click", () => {
+    const modifiedTask = { ...task };
+    // Mark this as a single occurrence edit
+    modifiedTask.isOccurrenceEdit = true;
+    modifiedTask.targetDate = selectedDate;
+    modifiedTask.originalStartDate = task.date.split(" to ")[0];
+    localStorage.setItem("familyApp_editTask", JSON.stringify(modifiedTask));
+    localStorage.setItem("familyApp_editTask_index", task.title + "-" + task.date + "-occurrence");
+    window.location.href = "/BeeMazing-A1/mobile/3-Tasks/addtasks.html";
+});
+
+// Edit future occurrences
+document.getElementById("editFutureBtn").addEventListener("click", () => {
+    const modifiedTask = { ...task };
+    // Mark this as a future edit (split task)
+    modifiedTask.isFutureEdit = true;
+    modifiedTask.splitDate = selectedDate;
+    modifiedTask.originalStartDate = task.date.split(" to ")[0];
+    localStorage.setItem("familyApp_editTask", JSON.stringify(modifiedTask));
+    localStorage.setItem("familyApp_editTask_index", task.title + "-" + task.date + "-future");
+    window.location.href = "/BeeMazing-A1/mobile/3-Tasks/addtasks.html";
+});
+
+// Delete single occurrence
+document.getElementById("deleteOccurrenceBtn").addEventListener("click", async () => {
+    if (confirm(`Are you sure you want to delete this task occurrence on ${selectedDate}? This will only affect this specific date.`)) {
+        modal.remove();
+        await deleteSingleOccurrence(task.title, selectedDate, task.date.split(" to ")[0]);
+        loadTasksForDate(selectedDate);
+    }
+});
+
+// Edit entire task (original functionality)
 document.getElementById("editTaskBtn").addEventListener("click", () => {
     localStorage.setItem("familyApp_editTask", JSON.stringify(task));
     localStorage.setItem("familyApp_editTask_index", task.title + "-" + task.date);
@@ -658,7 +702,58 @@ if (isSwiping) onEnd({});
 
 
 
-async function deleteInvalidTask(task) {
+async function deleteSingleOccurrence(title, date, originalStartDate) {
+    const adminEmail = localStorage.getItem("currentAdminEmail");
+    console.log("Deleting single occurrence with:", { adminEmail, title, date, originalStartDate });
+    if (!adminEmail) {
+        alert("No admin email found.");
+        return;
+    }
+
+    const maxRetries = 2;
+    let attempt = 0;
+
+    while (attempt <= maxRetries) {
+        const controller = new AbortController();
+        const timeoutId = setTimeout(() => controller.abort(), 90000);
+
+        try {
+            const response = await fetch(
+                `https://beemazing1.onrender.com/api/tasks/occurrence?adminEmail=${encodeURIComponent(adminEmail)}&title=${encodeURIComponent(title)}&date=${encodeURIComponent(date)}&originalStartDate=${encodeURIComponent(originalStartDate)}`,
+                {
+                    method: "DELETE",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    signal: controller.signal
+                }
+            );
+
+            clearTimeout(timeoutId);
+
+            if (!response.ok) {
+                const errorData = await response.json();
+                throw new Error(`Failed to delete occurrence: ${errorData.error || response.statusText}`);
+            }
+
+            console.log("Task occurrence deleted successfully");
+            alert("Task occurrence deleted successfully");
+            return;
+        } catch (error) {
+            clearTimeout(timeoutId);
+            attempt++;
+            if (attempt > maxRetries) {
+                console.error("Error deleting task occurrence after retries:", error);
+                alert(`Failed to delete task occurrence: ${error.message}`);
+                return;
+            }
+            console.log(`Retrying delete occurrence request (${attempt}/${maxRetries})...`);
+            await new Promise(resolve => setTimeout(resolve, 2000));
+        }
+    }
+}
+
+async function deleteInvalidTask(title, date) {
 const adminEmail = localStorage.getItem("currentAdminEmail");
 if (!adminEmail) return;
 
