--- a/mobile/4-Market/market.html
+++ b/mobile/4-Market/market.html
@@ -196,6 +196,111 @@ transform: scale(1.1);
       cursor: pointer;
     flex-shrink: 0;
 }
+
+/* User Selection Modal */
+.bottom-sheet {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+.bottom-sheet.show {
+    display: block;
+    opacity: 1;
+}
+.bottom-sheet-content {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    max-height: 70vh;
+    background: #FFF6E9;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.2);
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
+}
+.bottom-sheet.show .bottom-sheet-content {
+    transform: translateY(0);
+}
+.bottom-sheet-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+    border-bottom: 1px solid #DDD;
+    background: #FFF6E9;
+}
+.bottom-sheet-header h3 {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 600;
+    color: #5D4E41;
+}
+.bottom-sheet-header .close-btn {
+    background: none;
+    border: none;
+    color: #5D4E41;
+    font-size: 24px;
+    cursor: pointer;
+    padding: 5px;
+    transition: color 0.3s ease;
+}
+.bottom-sheet-header .close-btn:hover {
+    color: #FBB740;
+}
+.user-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    height: 240px;
+    overflow-y: auto;
+    background: #FFF6E9;
+}
+.user-list li {
+    padding: 15px 20px;
+    border-bottom: 1px solid #DDD;
+    font-size: 16px;
+    color: #5D4E41;
+    cursor: pointer;
+    transition: background 0.2s ease;
+    background: #FFF6E9;
+}
+.user-list li:hover {
+    background: #F0E6D2;
+}
+.user-list li:last-child {
+    border-bottom: none;
+}
+.user-list::-webkit-scrollbar {
+    width: 8px;
+}
+.user-list::-webkit-scrollbar-track {
+    background: #FFF6E9;
+}
+.user-list::-webkit-scrollbar-thumb {
+    background: #DDD;
+    border-radius: 4px;
+}
+.user-list::-webkit-scrollbar-thumb:hover {
+    background: #CCC;
+}
+
+@media (max-width: 600px) {
+    .bottom-sheet-content {
+        max-height: 80vh;
+    }
+    .bottom-sheet-header h3 {
+        font-size: 16px;
+    }
+}
         .content {
     position: absolute;
     top: calc(var(--header-height) + 45px); /* was 110px — now much tighter */
@@ -442,18 +547,16 @@ a[href="/BeeMazing-A1/mobile/4-Market/market.html"] svg {
         </a>
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- User Selection Modal -->
+    <div class="bottom-sheet" id="userSelectModal">
+        <div class="bottom-sheet-content">
+            <div class="bottom-sheet-header">
+                <h3>Select User</h3>
+                <button id="closeModalBtn" class="close-btn" aria-label="Close">×</button>
+            </div>
+            <ul id="userList" class="user-list"></ul>
+        </div>
+    </div>
 
     <script>
 
@@ -495,6 +598,65 @@ document.addEventListener("DOMContentLoaded", () => {
           addRewardBtn.href = `/BeeMazing-A1/mobile/4-Market/addreward.html?adminEmail=${encodeURIComponent(adminEmail)}`;
         }
         
+        // User selection modal functionality
+        const profileIcon = document.getElementById('profileIcon');
+        const userSelectModal = document.getElementById('userSelectModal');
+        const userList = document.getElementById('userList');
+        const closeModalBtn = document.getElementById('closeModalBtn');
+
+        // Fetch users from server
+        async function fetchUsersFromServer(email) {
+            try {
+                const res = await fetch(`https://beemazing1.onrender.com/get-users?adminEmail=${encodeURIComponent(email)}`);
+                const data = await res.json();
+                if (data.success) {
+                    return data.users || [];
+                }
+                return [];
+            } catch (err) {
+                console.error("Failed to fetch users:", err);
+                return [];
+            }
+        }
+
+        // Profile icon click handler
+        profileIcon.addEventListener("click", async () => {
+            if (!adminEmail) {
+                alert("Admin email not found. Please log in again.");
+                return;
+            }
+            const users = await fetchUsersFromServer(adminEmail);
+            userList.innerHTML = '';
+            if (users.length === 0) {
+                userList.innerHTML = '<li style="text-align: center; color: #999; padding: 20px;">No users found for this admin.</li>';
+            } else {
+                users.forEach(user => {
+                    const li = document.createElement('li');
+                    li.textContent = user;
+                    li.addEventListener('click', () => {
+                        // Store selected user and redirect to user view
+                        localStorage.setItem('currentUser', user);
+                        const currentPath = window.location.pathname;
+                        const newUrl = `${currentPath}?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(user)}`;
+                        window.location.href = newUrl;
+                    });
+                    userList.appendChild(li);
+                });
+            }
+            userSelectModal.classList.add('show');
+        });
+
+        // Close modal handlers
+        closeModalBtn.addEventListener('click', () => {
+            userSelectModal.classList.remove('show');
+        });
+
+        userSelectModal.addEventListener('click', (e) => {
+            if (e.target === userSelectModal) {
+                userSelectModal.classList.remove('show');
+            }
+        });
+
 
 
         const formatDate = (date) => `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
